@@ -16,6 +16,7 @@
   Add the -B, --nobuffer, option to gpspipe.
   gpsd opens $RUNDIR/chrony.clk.XXX.sock to supply serial time to chronyd.
   Add -g and --garmin options to gpxlogger for depth.
+  Add -F and --filein options to gpxlogger to read GPSD JSON from a file.
 
 3.24: 2022-04-22
   NTRIP 2.0 now works.  But still only plain HTML, not RTP, etc.
